V0.0.4 New callback functionality, fix expand/collapse external call

--- a/demo/src/pages/home/home.scss
+++ b/demo/src/pages/home/home.scss
@@ -1,3 +1,26 @@
 page-home {
-
+  .hidden{
+    opacity: 0;
+  }
+  .hideMe {
+    -moz-animation: cssAnimation 0.75s ease-out;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0.75s ease-out;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0.75s ease-out;
+    /* Opera */
+    animation: cssAnimation 0.75s ease-out;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+  }
+  @keyframes cssAnimation {
+    to {
+      opacity:0;
+    }
+  }
+  @-webkit-keyframes cssAnimation {
+    to {
+      opacity:0;
+    }
+  }
 }
